--- a/install
+++ b/install
@@ -33,8 +33,10 @@
     else
         mpiBaseDir=${I_MPI_ROOT}
     fi
-
-    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/intel64/include/ --with-mpi-libs=${mpiBaseDir}/intel64/lib/release/ --enable-parallel-merge"
+    # Intel usual folder structure
+    # mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/intel64/include/ --with-mpi-libs=${mpiBaseDir}/intel64/lib/release/ --enable-parallel-merge"
+    # Openmpi usual folder structure
+    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/include/ --with-mpi-libs=${mpiBaseDir}/lib/ --enable-parallel-merge"
   fi
 
   # Create installation folder
