--- a/install
+++ b/install
@@ -40,7 +40,9 @@
     # Intel usual folder structure
     # mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/intel64/include/ --with-mpi-libs=${mpiBaseDir}/intel64/lib/release/ --enable-parallel-merge"
     # Openmpi usual folder structure
-    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiHeaders} --with-mpi-libs=${mpiLib} --enable-parallel-merge"
+    # mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiHeaders} --with-mpi-libs=${mpiLib} --enable-parallel-merge"
+    mpiBaseDir="/home/software/openmpi/1.10.7-GNU"
+    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/include/ --with-mpi-libs=${mpiBaseDir}/lib/ --enable-parallel-merge"
   fi
 
   # Create installation folder
