Generaliced mpi installation.

--- a/install
+++ b/install
@@ -10,7 +10,7 @@
 
   scriptDir=$(pwd)/$(dirname $0)
 
-  # Setup Extrae for PAPI (or not) 
+  # Setup Extrae for PAPI (or not)
   papiPath=$(which papi_avail 2> /dev/null)
   if [ -z ${papiPath} ]; then
     # No PAPI available
@@ -30,19 +30,14 @@
     # MPI available detect openmpi or impi
     if [ -z "$I_MPI_ROOT" ]; then
         mpiBaseDir=${mpiPath%/bin**}
-        mpiHeaders="--with-mpi-headers=${mpiBaseDir}/include/"
-        mpiLib="--with-mpi-libs=${mpiBaseDir}/lib/"
+        mpiHeaders="${mpiBaseDir}/include/"
+        mpiLib="${mpiBaseDir}/lib/"
     else
         mpiBaseDir=${I_MPI_ROOT}
         mpiHeaders="${mpiBaseDir}/intel64/include/"
         mpiLib="${mpiBaseDir}/intel64/lib/"
     fi
-    # Intel usual folder structure
-    # mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/intel64/include/ --with-mpi-libs=${mpiBaseDir}/intel64/lib/release/ --enable-parallel-merge"
-    # Openmpi usual folder structure
-    # mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiHeaders} --with-mpi-libs=${mpiLib} --enable-parallel-merge"
-    mpiBaseDir="/home/software/openmpi/1.10.7-GNU"
-    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiBaseDir}/include/ --with-mpi-libs=${mpiBaseDir}/lib/ --enable-parallel-merge"
+    mpiArg="--with-mpi=${mpiBaseDir} --with-mpi-headers=${mpiHeaders} --with-mpi-libs=${mpiLib} --enable-parallel-merge"
   fi
 
   # Create installation folder
@@ -74,8 +69,7 @@
   make clean install
   if [ $? -ne 0 ]; then
     exit 1
-  fi  
+  fi
 
   # Exit normal
   exit 0
-
