--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 29Sep2020 Adds configure option to disable instrumentation of pthread_cond_* calls
  * 21Ago2020 Fixes bug instrumenting user code inside OpenMP
  * 19Ago2020 Fixes wrong exit event in cudaFree and cudaMemset
  * 12Ago2020 Modifications to support CUDA10
