--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 03Ago2021 Reads PC on RISC-V architecture to add support for time sampling
  + 29Sep2020 Adds configure option to disable instrumentation of pthread_cond_* calls
  * 21Ago2020 Fixes bug instrumenting user code inside OpenMP
  * 19Ago2020 Fixes wrong exit event in cudaFree and cudaMemset
